// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`cmds:extension runs \`extension\` command after workspace and module setup: extension-update - files 1`] = `
[
  "pgpm.plan",
  "package.json",
  "my-first.control",
  "Makefile",
  "verify/table_users.sql",
  "verify/table_products.sql",
  "verify/schema_myfirstapp.sql",
  "revert/table_users.sql",
  "revert/table_products.sql",
  "revert/schema_myfirstapp.sql",
  "deploy/table_users.sql",
  "deploy/table_products.sql",
  "deploy/schema_myfirstapp.sql",
]
`;

exports[`cmds:extension runs \`extension\` command after workspace and module setup: extension-update - result 1`] = `
{
  "_": [
    "extension",
  ],
  "cwd": "<CWD>",
  "extensions": [
    "plpgsql",
    "module-c",
  ],
}
`;

exports[`cmds:extension runs \`extension\` command after workspace and module setup: initial - control file 1`] = `
"# my-first extension
comment = 'my-first extension'
default_version = '0.0.1'
module_pathname = '$libdir/my-first'
requires = 'citext,plpgsql,pgcrypto'
relocatable = false
superuser = false
  "
`;

exports[`cmds:extension runs \`extension\` command after workspace and module setup: initial - module dependencies 1`] = `
{
  "modules": [],
  "native": [
    "citext",
    "plpgsql",
    "pgcrypto",
  ],
}
`;

exports[`cmds:extension runs \`extension\` command after workspace and module setup: initial - required modules 1`] = `
[
  "citext",
  "plpgsql",
  "pgcrypto",
]
`;

exports[`cmds:extension runs \`extension\` command after workspace and module setup: updated - control file 1`] = `
"# my-first extension
comment = 'my-first extension'
default_version = '0.0.1'
module_pathname = '$libdir/my-first'
requires = 'plpgsql,module-c'
relocatable = false
superuser = false
"
`;

exports[`cmds:extension runs \`extension\` command after workspace and module setup: updated - module dependencies 1`] = `
{
  "modules": [],
  "native": [
    "plpgsql",
    "module-c",
  ],
}
`;

exports[`cmds:extension runs \`extension\` command after workspace and module setup: updated - required modules 1`] = `
[
  "plpgsql",
  "module-c",
]
`;
